--- a/public/index.html
+++ b/public/index.html
@@ -10,34 +10,48 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta name="robots" content="index,follow" />
+    <meta name="googlebot" content="index,follow" />
+
+    <meta name="og:url" content="https://team-up-dev.github.io/" />
+    <meta mame="og:type" content="website" />
+    <meta name="og:title" content="Team Up Dev" />
+    <meta
+      name="og:description"
+      content="Web site created using create-react-app"
+    />
+    <meta
+      name="og:image"
+      content="https://team-up-dev.github.io/open-graph/og-img-big.png"
+    />
+    <meta
+      property="og:image:alt"
+      content="Team Up Dev Log Open Graph Big Version"
+    />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="640" />
+    <meta
+      name="og:image"
+      content="https://team-up-dev.github.io/open-graph/og-img-small.png"
+    />
+    <meta
+      property="og:image:alt"
+      content="Team Up Dev Log Open Graph Small Version"
+    />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+    <meta property="og:site_name" content="Team Up" />
+
+    <meta name="cannonical" content="https://team-up-dev.github.io/" />
+
     <title>Team Up Dev</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript
+      >Anda harus menyalakan JavaScript untuk bisa mengakses web ini.</noscript
+    >
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
