--- a/public/index.html
+++ b/public/index.html
@@ -1,57 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <meta name="robots" content="index,follow" />
-    <meta name="googlebot" content="index,follow" />
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <meta name="og:url" content="https://team-up-dev.github.io/" />
-    <meta mame="og:type" content="website" />
-    <meta name="og:title" content="Team Up Dev" />
-    <meta
-      name="og:description"
-      content="Web site created using create-react-app"
-    />
-    <meta
-      name="og:image"
-      content="https://team-up-dev.github.io/open-graph/og-img-big.png"
-    />
-    <meta
-      property="og:image:alt"
-      content="Team Up Dev Log Open Graph Big Version"
-    />
-    <meta property="og:image:width" content="1280" />
-    <meta property="og:image:height" content="640" />
-    <meta
-      name="og:image"
-      content="https://team-up-dev.github.io/open-graph/og-img-small.png"
-    />
-    <meta
-      property="og:image:alt"
-      content="Team Up Dev Log Open Graph Small Version"
-    />
-    <meta property="og:image:width" content="512" />
-    <meta property="og:image:height" content="512" />
-    <meta property="og:site_name" content="Team Up" />
+  <meta name="robots" content="index,follow" />
+  <meta name="googlebot" content="index,follow" />
 
-    <meta name="cannonical" content="https://team-up-dev.github.io/" />
+  <meta name="og:url" content="https://team-up-dev.github.io/" />
+  <meta mame="og:type" content="website" />
+  <meta name="og:title" content="Team Up Dev" />
+  <meta name="og:description" content="Web site created using create-react-app" />
+  <meta name="og:image" content="https://team-up-dev.github.io/open-graph/og-img-big.png" />
+  <meta property="og:image:alt" content="Team Up Dev Log Open Graph Big Version" />
+  <meta property="og:image:width" content="1280" />
+  <meta property="og:image:height" content="640" />
+  <meta name="og:image" content="https://team-up-dev.github.io/open-graph/og-img-small.png" />
+  <meta property="og:image:alt" content="Team Up Dev Log Open Graph Small Version" />
+  <meta property="og:image:width" content="512" />
+  <meta property="og:image:height" content="512" />
+  <meta property="og:site_name" content="Team Up" />
 
-    <title>Team Up Dev</title>
-  </head>
-  <body>
-    <noscript
-      >Anda harus menyalakan JavaScript untuk bisa mengakses web ini.</noscript
-    >
-    <div id="root"></div>
-  </body>
+  <meta name="cannonical" content="https://team-up-dev.github.io/" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+    integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+  <title>Team Up Dev</title>
+</head>
+
+<body>
+  <noscript>Anda harus menyalakan JavaScript untuk bisa mengakses web ini.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
